applications/media-server/manifests/jellyseerr-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-tailscale
  namespace: media
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyseerr
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
